<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_dark"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_name"
            tools:textAlignment="viewStart" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="91dp"
            android:layout_height="148dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_title"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_cont_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_title"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/image_view"
            android:text="@string/user_rating"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_view" />

        <TextView
            android:id="@+id/release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_title"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/image_view"
            android:text="@string/release_date"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rating_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toTopOf="@+id/rating_text" />

        <TextView
            android:id="@+id/rating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_title"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/rating_text"
            android:text="@string/text_display"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/rating_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/rating_text"
            app:layout_constraintTop_toBottomOf="@+id/rating_text" />

        <TextView
            android:id="@+id/release_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_title"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/rating_text"
            android:text="@string/text_display"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/rating_value"
            app:layout_constraintEnd_toEndOf="@+id/release_date_text"
            app:layout_constraintStart_toStartOf="@+id/release_date_text"
            app:layout_constraintTop_toTopOf="@+id/rating_value" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="30dp"
            android:text="@string/synopsis"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="@+id/release_date_text"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="@+id/rating_text"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="188dp"
            android:layout_height="108dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviewView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        </android.support.v7.widget.RecyclerView>



    </android.support.constraint.ConstraintLayout>
</ScrollView>